fix: SonarQube issues